--- a/springmvc/src/main/resources/templates/common/footer.html
+++ b/springmvc/src/main/resources/templates/common/footer.html
@@ -9,7 +9,7 @@
 <!--Fragment 정의-->
 <div th:fragment="footer">
     <footer>
-        <p></p>
+        <p>ⓒ 2024 My Website. All rights reserved.</p>
     </footer>
 </div>
 
