--- a/springmvc/src/main/resources/templates/home.html
+++ b/springmvc/src/main/resources/templates/home.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Home</title>
 </head>
 <body>
-$END$
+<h1>spring mvc hi!!</h1>
+
+<div th:include="common/footer :: footer"></div>
 </body>
 </html>
