--- a/friendexam/src/main/resources/templates/friends/detail.html
+++ b/friendexam/src/main/resources/templates/friends/detail.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>친구 상세정보 페이지</title>
 </head>
 <body>
-$END$
+<h2 th:text="${friend.name}">친구이름</h2>
+<div>
+    <strong>Email : </strong> <span th:text="${friend.email}">email</span>
+</div>
+<a th:href="@{/friends}">친구목록</a>
+<a th:href="@{/friends/edit/{id}(id=${friend.id})}">수정</a>
+<a th:href="@{/friends/delete/{id}(id=${friend.id})}">삭제</a>
 </body>
 </html>
