--- a/project/boardMVC/src/main/resources/templates/board/writeform.html
+++ b/project/boardMVC/src/main/resources/templates/board/writeform.html
@@ -18,7 +18,7 @@
         <label for="content">본문:</label>
         <textarea id="content" th:field="*{content}" required></textarea>
 
-        <label for="password">비밀번호:</label>
+        <label for="password">암호:</label>
         <input type="password" id="password" th:field="*{password}" required />
 
         <input type="submit" value="등록" />
