--- a/project/boardMVC/src/main/resources/templates/board/deleteform.html
+++ b/project/boardMVC/src/main/resources/templates/board/deleteform.html
@@ -14,7 +14,7 @@
         <label for="password">암호:</label>
         <input type="password" id="password" name="password" required />
         <input type="submit" value="삭제"/>
-        <div th:if="${param.error}" class="error-message">비밀번호가 일치하지 않습니다.</div>
+        <div th:if="${param.error}" class="error-message">암호가 일치하지 않습니다.</div>
     </form>
 </div>
 </body>
