--- a/project/boardMVC/src/main/resources/templates/board/updateform.html
+++ b/project/boardMVC/src/main/resources/templates/board/updateform.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="form-group">
-                <label for="password">비밀번호:</label>
+                <label for="password">암호:</label>
                 <input type="password" id="password" th:field="*{password}" required />
             </div>
 
@@ -38,7 +38,7 @@
             </div>
 
             <div th:if="${errorMessage == true}" class="error-message">
-                <p>비밀번호가 일치하지 않습니다.</p>
+                <p>암호가 일치하지 않습니다.</p>
             </div>
         </form>
     </div>
